Closed
Bug 1308078
Opened 8 years ago
Closed 8 years ago
Don't decode metadata again when exiting the dormant state
Categories
(Core :: Audio/Video: Playback, defect, P3)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla52
Tracking | Status | |
---|---|---|
firefox51 | --- | unaffected |
firefox52 | --- | fixed |
People
(Reporter: jwwang, Assigned: jwwang)
References
Details
Crash Data
Attachments
(2 files)
MDSM enters the dormant state only after decoding metadata. There is no need to decode metadata again when going out of the dormant state. It should transition to DECODING_FIRSTFRAME to start decoding.
Assignee | ||
Updated•8 years ago
|
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Assignee | ||
Updated•8 years ago
|
Attachment #8800105 -
Flags: review?(kaku)
Attachment #8800106 -
Flags: review?(kaku)
Comment 3•8 years ago
|
||
mozreview-review |
Comment on attachment 8800105 [details]
Bug 1308078. Part 1 - Don't decode metadata again when exiting the dormant state.
https://reviewboard.mozilla.org/r/85138/#review83694
Attachment #8800105 -
Flags: review?(kaku) → review+
Comment 4•8 years ago
|
||
mozreview-review |
Comment on attachment 8800106 [details]
Bug 1308078. Part 2 - no need to store mQueuedSeek in WaitForCDMState::HandleDormant.
https://reviewboard.mozilla.org/r/85140/#review83696
Could we also apply this to DecodingFirstFrameState if nothing has been decoded yet?
Attachment #8800106 -
Flags: review?(kaku) → review+
Assignee | ||
Comment 5•8 years ago
|
||
mozreview-review-reply |
Comment on attachment 8800106 [details]
Bug 1308078. Part 2 - no need to store mQueuedSeek in WaitForCDMState::HandleDormant.
https://reviewboard.mozilla.org/r/85140/#review83696
We can't. Suppose we have decoded the 1st audio sample and are waiting for the 1st video sample to finish decoding first frames. And then we enter dormant without storing the queued seek. When we exit the dormant state, we will enter DecodingFirstFrameState again. The 1st audio sample we receive is actually the 2nd sample since we didn't seek to re-position the demuxer.
Assignee | ||
Comment 6•8 years ago
|
||
Thanks for the review!
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Pushed by jwwang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/c26806bad1b7
Part 1 - Don't decode metadata again when exiting the dormant state. r=kaku
https://hg.mozilla.org/integration/autoland/rev/a6a7e9eca986
Part 2 - no need to store mQueuedSeek in WaitForCDMState::HandleDormant. r=kaku
Comment 10•8 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/c26806bad1b7
https://hg.mozilla.org/mozilla-central/rev/a6a7e9eca986
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox52:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment 13•8 years ago
|
||
Does this affect 51?
There are crashes on 51 with this signature, I'm not sure if it's the same crash.
Crash Signature: [@ mozilla::BaseAutoLock<T>::BaseAutoLock<T> ]
status-firefox51:
--- → ?
Flags: needinfo?(jwwang)
Assignee | ||
Comment 14•8 years ago
|
||
No. The crash is caused by bug 1307677 and fixed by bug 1308078.
Flags: needinfo?(jwwang)
Updated•8 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•