Bug 1308078. Part 1 - Don't decode metadata again when exiting the dormant state. r=kaku

MozReview-Commit-ID: JBzxcePE8F8